# python-project-83

./: .env  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  db.py  services.py  valid_url.py  web_parser.py
page_analyzer/templates/: 404.html  base.html  home.html  url_detail.html  urls.html
page_analyzer/tests/: test_services.py
templates/: base.html  home.html
