[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a simple web application that checks the basic page-level elements of websites valuable for on-page SEO."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flake8>=7.2.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "validators>=0.34.0",
]
