[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Алексей <kochetkoov.ao@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.3"
flask = "^3.1.0"
gunicorn = "^23.0.0"
lxml = "^5.3.2"
psycopg2-binary = "^2.9.10"
validators = "^0.34.0"
ruff = "^0.11.5"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
flake8 = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
